--- a/welcomehomefront/package.json
+++ b/welcomehomefront/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/env": "^15.2.0",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
