--- a/welcomehomefront/package.json
+++ b/welcomehomefront/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
     "mapbox-gl": "^3.10.0",
     "next": "15.2.0",
