--- a/welcomehomefront/package.json
+++ b/welcomehomefront/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/env": "^15.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -23,6 +25,7 @@
     "lucide-react": "^0.477.0",
     "mapbox-gl": "^3.10.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-map-gl": "^8.0.1",
